# TV-Playlist-Cleaner

./: .flake8  .gitignore  CHANGELOG.md  CI_FIXES.md  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  README.md  cleaner.py  cleaner_advanced.py  cleaner_config.py  cleaner_multi_source.py  cleaner_tnt.py  compare_playlists.py  demo.py  docker-compose.yml  docker-run.sh  playlist_utils.py  pyproject.toml  setup.py  sources_config.py  test-docker.sh  test_quick.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: __init__.py  test_cleaner.py  test_integration.py  test_playlist_utils.py
