[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tv-playlist-cleaner"
version = "1.0.0"
description = "Un script Python avancé pour nettoyer, filtrer et optimiser les playlists M3U"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TV Playlist Cleaner Team", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "black>=21.0",
    "bandit>=1.6",
]

[project.scripts]
tv-playlist-cleaner = "cleaner:main"

[project.urls]
Homepage = "https://github.com/yourusername/TV-playlist-cleaner"
Repository = "https://github.com/yourusername/TV-playlist-cleaner"
Documentation = "https://github.com/yourusername/TV-playlist-cleaner#readme"
"Bug Tracker" = "https://github.com/yourusername/TV-playlist-cleaner/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert_used - Allow asserts in tests
# Removed B601 (shell injection) - now properly validated
skips = ["B101"]

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]
exclude = ["tests/*"]

[tool.hatch.build.targets.sdist]
only-include = ["*.py", "pyproject.toml"]
exclude = ["tests/*"] 